// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`saveFullPageScreen > should handle NaN dimension values 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-fullpage.png",
}
`;

exports[`saveFullPageScreen > should handle NaN dimension values 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "addressBarShadowPadding": 6,
    "devicePixelRatio": NaN,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "fullPageScrollTimeout": 1500,
    "hideAfterFirstScroll": [],
    "innerHeight": NaN,
    "isAndroid": false,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isIOS": false,
    "isLandscape": false,
    "screenHeight": NaN,
    "screenWidth": NaN,
    "toolBarShadowPadding": 6,
  },
]
`;

exports[`saveFullPageScreen > should handle NaN dimension values 3`] = `
[
  {
    "data": [
      "screenshot-1",
      "screenshot-2",
    ],
    "fullPageHeight": 2000,
    "fullPageWidth": 1200,
  },
  {
    "devicePixelRatio": NaN,
    "isLandscape": false,
  },
]
`;

exports[`saveFullPageScreen > should handle NaN dimension values 4`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "fullpage-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": NaN,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": NaN,
      "outerWidth": NaN,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": NaN,
      "screenWidth": NaN,
      "tag": "test-fullpage",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "desktop",
    "removeElements": [],
  },
]
`;

exports[`saveFullPageScreen > should handle undefined hideAfterFirstScroll, hideElements, and removeElements 1`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "addressBarShadowPadding": 6,
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "fullPageScrollTimeout": 1500,
    "hideAfterFirstScroll": [],
    "innerHeight": 900,
    "isAndroid": false,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isIOS": false,
    "isLandscape": false,
    "screenHeight": 1080,
    "screenWidth": 1920,
    "toolBarShadowPadding": 6,
  },
]
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and enableLegacyScreenshotMethod is false 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-fullpage.png",
}
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and enableLegacyScreenshotMethod is false 2`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "origin": "document",
  },
]
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and enableLegacyScreenshotMethod is false 3`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "bidi-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-fullpage",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "desktop",
    "removeElements": [],
  },
]
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and userBasedFullPageScreenshot is false 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-fullpage.png",
}
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and userBasedFullPageScreenshot is false 2`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
    "origin": "document",
  },
]
`;

exports[`saveFullPageScreen > should use Bidi screenshot when available and userBasedFullPageScreenshot is false 3`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "bidi-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-fullpage",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "desktop",
    "removeElements": [],
  },
]
`;

exports[`saveFullPageScreen > should use legacy method when Bidi is available but both userBasedFullPageScreenshot and enableLegacyScreenshotMethod are true 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-fullpage.png",
}
`;

exports[`saveFullPageScreen > should use legacy method when Bidi is available but both userBasedFullPageScreenshot and enableLegacyScreenshotMethod are true 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "addressBarShadowPadding": 6,
    "devicePixelRatio": 2,
    "deviceRectangles": {
      "bottomBar": {
        "height": 0,
        "width": 390,
        "x": 0,
        "y": 800,
      },
      "homeBar": {
        "height": 34,
        "width": 390,
        "x": 0,
        "y": 780,
      },
      "leftSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "rightSidePadding": {
        "height": 0,
        "width": 0,
        "x": 0,
        "y": 0,
      },
      "screenSize": {
        "height": 844,
        "width": 390,
      },
      "statusBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "statusBarAndAddressBar": {
        "height": 47,
        "width": 390,
        "x": 0,
        "y": 0,
      },
      "viewport": {
        "height": 733,
        "width": 390,
        "x": 0,
        "y": 47,
      },
    },
    "fullPageScrollTimeout": 1500,
    "hideAfterFirstScroll": [],
    "innerHeight": 900,
    "isAndroid": false,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isIOS": false,
    "isLandscape": false,
    "screenHeight": 1080,
    "screenWidth": 1920,
    "toolBarShadowPadding": 6,
  },
]
`;

exports[`saveFullPageScreen > should use legacy method when Bidi is available but both userBasedFullPageScreenshot and enableLegacyScreenshotMethod are true 3`] = `
[
  {
    "data": [
      "screenshot-1",
      "screenshot-2",
    ],
    "fullPageHeight": 2000,
    "fullPageWidth": 1200,
  },
  {
    "devicePixelRatio": 2,
    "isLandscape": false,
  },
]
`;

exports[`saveFullPageScreen > should use legacy method when Bidi is available but both userBasedFullPageScreenshot and enableLegacyScreenshotMethod are true 4`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "fullpage-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-fullpage",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "desktop",
    "removeElements": [],
  },
]
`;
